--- a/数据结构/算法基础.md
+++ b/数据结构/算法基础.md
@@ -1,1 +1,13 @@
-![avatar](数据结构和算法.pdf)
+#### 时间复杂度
+
+    代码执行时间随数据规模增长的变化趋势
+
+    - 只关注循环执行次数最多的一行
+    - 加法法则：总复杂度等于量级最大的那段代码的复杂度
+    - 乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积
+
+#### 空间复杂度
+
+    表示算法的存储空间与数据规模之间的增长关系
+
+![avatar](数据结构和算法.png)
