--- a/JMM/缓存.md
+++ b/JMM/缓存.md
@@ -4,8 +4,12 @@
 > 缓存行大，命中率高但读取效率低，缓存行小，命中率低但读取效率高<br>
 > 工业实践的妥协结果：目前（2021）的计算机多采用64bytes（64 * 8bit）为一行
 
+缓存行有四种状态：Modified(被修改的)、Exclusive(独占)、Shared(共享)、Invalid(失效)
+
+
 ## 伪共享
 
 > 多个CPU同时读一块内存区域就可以理解为“共享”。就会产生冲突，需要控制协议来协调访问。<br>
 > 会引起“共享”的最小内存区域大小是cache line。
+
 
