--- a/JMM/缓存行.md
+++ b/JMM/缓存行.md
@@ -9,7 +9,6 @@
 
 ## 伪共享
 
-> 多个CPU同时读一块内存区域就可以理解为“共享”。就会产生冲突，需要控制协议来协调访问。<br>
-> 会引起“共享”的最小内存区域大小是cache line。
+> 位于同一缓存行的两个不同数据，被两个不同的CPU锁定，产生相互影响
 
 
