--- a/JVM/马师傅/类加载过程.md
+++ b/JVM/马师傅/类加载过程.md
@@ -16,7 +16,20 @@
         1. extends ClassLoader
         2. 重写findClass() -> defineClass
         3. 加密
-    5. 混合执行 编译执行 解释执行
+    5. 执行问题
+        1. 混合执行 -Xmixed (默认)
+            1. 混合使用解释器 + 热点代码编译
+            2. 起始阶段采用解释执行
+            3. 热点代码检测（HotSpot），默认-XX:CompileThreshold=10000
+                1. 多次被调用的方法（方法计数器：监测方法执行频率）
+                2. 多次被调用的循环（循环计数器：监测循环执行频率）
+            4. 对热点代码进行编译
+        2. 编译执行 -Xcomp
+            1. 由JIT（Just In-Time Compiler）编译为本地代码（C语言实现）执行
+            2. 启动慢 执行快
+        3. 解释执行 -Xint
+            1. 通过编译器（bytecode interceptor）解释执行
+            2. 启动快 执行慢
 
 - 连接
     - 验证
