--- a/JVM/马师傅/类加载.md
+++ b/JVM/马师傅/类加载.md
@@ -47,6 +47,11 @@
 
   > 调用类初始化代码，给静态成员变量赋初始值
 
+## 总结
+
+> load -> 默认值 -> 初始值
+> new -> 申请内存 -> 赋默认值 -> 赋初始值
+
 ## 类加载过程
 
 ![类加载过程.png](类加载过程.png)
