--- a/JVM/马师傅/垃圾回收.md
+++ b/JVM/马师傅/垃圾回收.md
@@ -1,7 +1,14 @@
 ### 如何定位垃圾
 
 1. 引用计数
+
+   > 对象头维护了一个counter，每增加一次对该对象的引用，计数器自加。
+   > 如果对该对象的引用失联，则计数器自减。  
+   > 当counter为0时，表示该对象已被废除。
+
 2. 可达性分析
+
+   > 已GC Roots的对象做为起点，从这些节点开始向下搜索
 
 ### 常见的垃圾回收算法
 
