--- a/JVM/马师傅/垃圾回收.md
+++ b/JVM/马师傅/垃圾回收.md
@@ -8,7 +8,8 @@
 
 2. 可达性分析
 
-   > 已GC Roots的对象做为起点，从这些节点开始向下搜索
+   > 已GC Roots的对象做为起点，从这些节点开始向下搜索，搜索所走过的路径称为引用链，
+   > 当一个对象到GC Roots没有任何引用链相连时，则证明该对象是不可用的。
 
 ### 常见的垃圾回收算法
 
