--- a/JVM/马师傅/类加载.md
+++ b/JVM/马师傅/类加载.md
@@ -1,5 +1,3 @@
-# 类加载
-
 ## 加载过程
 
 - 加载
@@ -52,6 +50,6 @@
 > load -> 默认值 -> 初始值
 > new -> 申请内存 -> 赋默认值 -> 赋初始值
 
-## 类加载过程
+## 类加载过程图
 
-![类加载过程.png](类加载过程.png)
+![类加载过程.png](../../pics/类加载过程.png)
