--- a/数据结构/数组.md
+++ b/数据结构/数组.md
@@ -1,6 +1,6 @@
 ## 数组
 
-数组是一种常见的数据结构，它由相同类型的元素（element）组成，并且是使用一块连续的内存来存储。
+数组是一种常见的数据结构，它由相同类型的元素（element）组成，并且是使用**一块连续的内存来存储**。
 
 特点：随机访问，但是容量有限
 
@@ -26,5 +26,4 @@ a[k]_address = base_adress + (k-1) * type_size;
 ~~~
 
 对比两个公式，从1开始的编号，每次随机访问会多一次减法运算，对于CPU来说，就是多一次减法指令。
-
 
