--- a/数据结构/链表.md
+++ b/数据结构/链表.md
@@ -1,1 +1,36 @@
 ## 链表
+
+链表和数组不同，链表不需要**连续的内存**
+
+#### 单链表
+
+特点：插入和删除操作都是O(1)，随机访问是O(n)
+
+`java`
+
+```
+public class SingleLinkedList<T> {
+    // 数据
+    private T data;
+    // 下一个节点
+    private SingleLinkedList next;
+}
+```
+
+### 循环链表
+
+### 双向链表
+
+`java`
+
+```
+public class DoublyLinkedList<T> {
+    // 前一个节点
+    private DoublyLinkedList prev;
+		// 数据
+    private T data;
+    // 后一个节点
+    private DoublyLinkedList next;
+
+}
+```
