--- a/数据结构/链表.md
+++ b/数据结构/链表.md
@@ -6,9 +6,7 @@
 
 特点：插入和删除操作都是O(1)，随机访问是O(n)
 
-`java`
-
-```
+```java
 public class SingleLinkedList<T> {
     // 数据
     private T data;
@@ -21,13 +19,11 @@ public class SingleLinkedList<T> {
 
 ### 双向链表
 
-`java`
-
-```
+```java
 public class DoublyLinkedList<T> {
     // 前一个节点
     private DoublyLinkedList prev;
-		// 数据
+    // 数据
     private T data;
     // 后一个节点
     private DoublyLinkedList next;
