--- a/Redis/动态字符串.md
+++ b/Redis/动态字符串.md
@@ -2,9 +2,7 @@
 
 > 底层是SDS（动态字符串）
 
-`c`
-
-```
+```c
 struct sdshdr {
   // 记录buf数组中已使用字节的数量
   int len;
@@ -16,3 +14,5 @@ struct sdshdr {
 ```
 
 ### 自动扩容
+
+当free不足，
