--- a/Redis/动态字符串.md
+++ b/Redis/动态字符串.md
@@ -13,6 +13,30 @@ struct sdshdr {
 }
 ```
 
-### 自动扩容
+### 特点
 
-当free不足，
+- 常数复杂度获取字符串长度
+
+  > SDS相比C字符串额外记录了len属性，每次获取字符串长度只需要访问len属性，并不需要遍历获取。
+
+- 杜绝缓冲区溢出
+
+  > C语言使用strcat函数进行两个字符串拼接时，一旦没有足够的长度分配空间就会造成缓冲区溢出。
+
+- 减少修改字符串的内存重新分配次数
+
+  > C语言由于不记录字符串长度，所以如果需要修改字符串，必须要重新分配内存（先释放再申请），因为如果不重新分配内存，字符串长度增大时会造成内存缓冲区溢出，字符串长度减小会造成内存泄漏  
+  >
+  > 而SDS记录了len和free属性，对于修改字符串SDS实现了空间预分配和惰性空间释放两种策略。
+  >
+  > 1.空间预分配：对字符串进行扩展时，扩展的内存比实际需要的多，这样可以减少连续执行字符串增长操作所需的内存重分配次数。
+  >
+  > 2.惰性空间释放：对字符串进行缩短操作时，程序不会立即使用内存重分配来回收缩短的字节长度，而是使用free属性记录下来，等待后续使用。（SDS提供了API，在我们需要的时候可以手动释放这些未使用的空间）。
+
+- 二进制安全
+
+  > 因为C字符串以空字符作为字符串结束的标识，而对于一些二进制文件（如图片等），内容可能包含空字符串，因此C字符串无法正确存取，而所有SDS的API都是以二进制的方式处理buf里面的元素，并且SDS不是以空字符串作为结束标识，而是以len属性表示的长度来判断字符串是否结束。
+
+- 兼容部分C字符串函数
+
+  > 虽然SDS是二进制安全的，但是一样遵从每个字符串都是以空字符串结尾。这样可以重用C语言库<string.h>中的一部分函数
