--- a/Redis/链表.md
+++ b/Redis/链表.md
@@ -32,3 +32,20 @@ typedef struct list {
 }list;
 ```
 
+### 特点
+
+- 双端
+
+  > 链表具有前置节点和后置节点的引用，所以获取前后两个节点的时间复杂度是O(1)
+
+- 无环
+
+  > 表头节点的prev指针和表尾节点的next指针都指向NULL，对链表的访问都是以NULL结束。
+
+- 带链表长度计数器
+
+  > 通过len属性获取链表长度的时间复杂度是O(1)
+
+- 多态
+
+  > 链表节点使用Void*指针来保存节点值，可以保存各种类型的值。
