--- a/Redis/字典.md
+++ b/Redis/字典.md
@@ -23,3 +23,21 @@ typedef struct dict {
 
 > type属性和privdata属性是针对不同类型的键值对，为创建多态字典而设置的。  
 > type属性是一个指向dictType结构的指针，每个dictType结构保存这一簇用于操作特定类型键值对的函数，而privdata属性则保存了需要传给那些类型特定函数的可选参数。
+
+```c
+typedef struct dictType {
+  // 计算哈希值的函数
+  unsigned int (*hashFunction)(const void *key);
+  // 复制键的函数
+  void *(*keyDup)(void *privdata,const void *key);
+  // 复制值的函数
+  void *(*valDup)(void *privdata,const void *obj);
+  // 对比键的函数
+  int (*keyCompare)(void *privdata,const void *key1,const void *key2);
+  // 销毁键的函数
+  int (*keyDestructor)(void *privdata,const void *key);
+  // 销毁值的函数
+  int (*valDestructor)(void *privdata,const void *obj);
+}
+```
+
