--- a/JVM/深入理解JVM虚拟机/对象创建.md
+++ b/JVM/深入理解JVM虚拟机/对象创建.md
@@ -1,4 +1,4 @@
-> 当虚拟机遇到一条new指令时，首先去检查这个指令的参数是否能在常量池中定位到一个类的符号引用，并且检查这个符号引用代表的类是否已被加载、解析喝初始化过。如果没有，就先进行对应的类加载。  
+> 当虚拟机遇到一条new指令时，首先去检查这个指令的参数是否能在常量池中定位到一个类的符号引用，并且检查这个符号引用代表的类是否已被加载、解析和初始化过。如果没有，就先进行对应的类加载。  
 
 ### 新对象分配内存
 
