--- a/Redis/持久化.md
+++ b/Redis/持久化.md
@@ -2,12 +2,12 @@
 
 > Redis持久化提供了两种方式：AOF（appendonly file）和RDB（Redis DB）
 
-| 命令       | AOF                                | RDB          |
-| ---------- | ---------------------------------- | ------------ |
-| 启动优先级 | 低                                 | 高           |
-| 体积       | 小                                 | 大           |
-| 恢复速度   | 快                                 | 慢           |
-| 数据安全性 | 容易丢数据<br />（最多丢一秒数据） | 根据策略决定 |
+| 命令    | AOF            | RDB    |
+|-------|----------------|--------|
+| 启动优先级 | 低              | 高      |
+| 体积    | 小              | 大      |
+| 恢复速度  | 快              | 慢      |
+| 数据安全性 | 容易丢数据（最多丢一秒数据） | 根据策略决定 |
 
 ### RDB
 
