--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,1 +1,9 @@
 ## 操作系统
+
+### CPU竞争策略
+
+> Unix系统使用的是时间片算法，Windows系统属于的是抢占式的  
+>
+> 在时间片算法，所有的进程排成一个队列。操作系统按照他们的顺序，给每个进程分配一段时间，即该进程允许运行的时间。如果在时间片结束时进程还在运行，则CPU将被剥夺并分配给另一个进程。如果进程在时间片结束前阻塞或结束，则CPU当即进行切换。调度程序所要做的就是维护一张就绪进程列表，当进程用完它的时间片后，它被移到队列的末尾。
+>
+> 抢占式操作系统，就是说如果一个进程得到了CPU时间，除非它自己放弃使用CPU，否则将完全霸占CPU。因此可以看出，在抢占式操作系统中，操作系统假设所有的进程都是“人品很好”的，会主动退出 CPU 。在抢占式操作系统中，假设有若干进程，操作系统会根据他们的优先级、饥饿时间（已经多长时间没有使用过 CPU 了），给他们算出一个总的优先级来。操作系统就会把CPU交给总优先级最高的这个进程。当进程执行完毕或者自己主动挂起后，操作系统就会重新计算一次所有进程的总优先级，然后再挑一个优先级最高的把CPU控制权交给他。
