Redis Sentinel.md

--- a/网络协议/网络协议基础.md
+++ b/网络协议/网络协议基础.md
@@ -5,3 +5,18 @@
 - 网络层：IP、GRE、ICMP
 - 链路层：ARP、STP、VLAN
 - 物理层：网络跳线
+
+
+
+
+
+### UDP
+
+> 无连接、不可靠、无流量控制、无拥塞控制。
+
+### TCP
+
+> 三次握手、有序、可靠、流量控制、拥塞控制、定时重传。
+
+
+
