--- a/SpringBoot/自动装配.md
+++ b/SpringBoot/自动装配.md
@@ -1,33 +1,35 @@
 ## 自动装配
 
+> 入口类：AutoConfigurationImportSelector
+
 ```java
 protected AutoConfigurationEntry getAutoConfigurationEntry(AnnotationMetadata annotationMetadata) {
-    	// 判断是否开启了自动装配
+    // 判断是否开启了自动装配
 		if (!isEnabled(annotationMetadata)) {
 			return EMPTY_ENTRY;
 		}
 		AnnotationAttributes attributes = getAttributes(annotationMetadata);
-      	//获取候选配置类
+    // 获取候选配置类
 		List<String> configurations = getCandidateConfigurations(annotationMetadata, attributes);
-    	// 去掉重复配置类
+    // 去掉重复配置类
 		configurations = removeDuplicates(configurations);
-		//获得注解中被exclude和excludeName排除的类的集合
+		// 获得注解中被exclude和excludeName排除的类的集合
 		Set<String> exclusions = getExclusions(annotationMetadata, attributes);
-    	//检查被排除类是否可实例化、是否被自动注册配置所使用，不符合条件则抛出异常
+    // 检查被排除类是否可实例化、是否被自动注册配置所使用，不符合条件则抛出异常
 		checkExcludedClasses(configurations, exclusions);
-    	//从候选配置类中去除掉被排除的类
+    // 从候选配置类中去除掉被排除的类
 		configurations.removeAll(exclusions);
 		configurations = getConfigurationClassFilter().filter(configurations);
-	    //将配置类和排除类通过事件传入到监听器中
+	  // 将配置类和排除类通过事件传入到监听器中
 		fireAutoConfigurationImportEvents(configurations, exclusions);
-    	//最终返回符合条件的自动配置类的全限定名数组
+    // 最终返回符合条件的自动配置类的全限定名数组
 		return new AutoConfigurationEntry(configurations, exclusions);
 	}
 ```
 
 ```java
 private static Map<String, List<String>> loadSpringFactories(ClassLoader classLoader) {
-    	// 先判断缓存里有没有，有就直接返回
+    // 先判断缓存里有没有，有就直接返回
 		Map<String, List<String>> result = cache.get(classLoader);
 		if (result != null) {
 			return result;
@@ -35,7 +37,7 @@ private static Map<String, List<String>> loadSpringFactories(ClassLoader classLo
 
 		result = new HashMap<>();
 		try {
-            // 加载META-INF/spring.factories
+      // 加载META-INF/spring.factories
 			Enumeration<URL> urls = classLoader.getResources(FACTORIES_RESOURCE_LOCATION);
 			while (urls.hasMoreElements()) {
 				URL url = urls.nextElement();
