--- a/数据结构/链表.md
+++ b/数据结构/链表.md
@@ -1,6 +1,6 @@
 ## 链表
 
-链表和数组不同，链表不需要**连续的内存**
+> 链表和数组不同，链表不需要**连续的内存**
 
 #### 单链表
 
@@ -27,6 +27,5 @@ public class DoublyLinkedList<T> {
     private T data;
     // 后一个节点
     private DoublyLinkedList next;
-
 }
 ```
